# shorturl-rs

./: Cargo.toml  database.sqlite3
migrations/2024-02-14-072319_create_urls/: down.sql  up.sql
src/: main.rs  schema.rs
