[package]
name = "shorturl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.30.0", features = ["full"] }
nanoid = "0.4.0"
serde = { version = "1.0.196", features = ["derive"] }
deadpool-diesel = { version = "0.5.0", features = ["sqlite"] }
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = "2"
dotenvy = "0.15"